# ProblemSolving

./: CMakeLists.txt  README.md  stats.json
0136-single-number/: 0136-single-number.py
0704-binary-search/: 0704-binary-search.cpp
1468-check-if-n-and-its-double-exist/: check-if-n-and-its-double-exist.cpp
1844-replace-all-digits-with-characters/: 1844-replace-all-digits-with-characters.py
27-remove-element/: remove-element.py
AOC/: 1  1.cpp  4  4.cpp  5  5 2.cpp  5v2  5v2.cpp  6 2  6.cpp  7.cpp  8.cpp  input.txt  output.txt  test  test.cpp
Algoritmer++/: 2022-2  2022-2 2.cpp  Dijk  Dijk 2.cpp  Dijkstra.cpp  Djirk.cpp  Lab  OnesAndZeros  OnesAndZeros.cpp  SepStr.cpp  Swap 2.cpp  UnionFind.cpp  VectorLabyrinth 2.cpp  a.out  anothaOne  anothaOne 2.cpp  lenstr 2.cpp  str(n)cpy.cpp  test.cpp
CP/GFG/: a.out  add_ones.cpp  mergesort.cpp  ropecutting 2.cpp
CP/NIO/: 937B 2  937B.cpp  937C  937C.cpp  937D.cpp  937E 2  937E.cpp  Rektangelrot  Rektangelrot 2.cpp  a.out  brack.cpp  dice.cpp  input 2.txt  input.in  mincoins 2  mincoins.cpp  mino  mino.cpp  minot.cpp  output.out  rektøv  rektøv 2.cpp  rett  rett.cpp  rettf  rettf 2.cpp  rettferdig 2  rettferdig.cpp  rettferdighet 2  rettferdighet.cpp  rettmedneg 2  rettmedneg.cpp  rettutenneg  rettutenneg.cpp  temp 2  temp.cpp  test.cpp
CP/Prac/: 1428B 2.cpp  1428C 2.cpp  1904A.cpp  1928A 2.cpp  1928B.cpp  1950E  1950E 2.cpp  2014A.py  2014B.py  2014C 2  2014C.cpp  2020A.cpp  2020B.cpp  2020C.cpp  37per 2  37per.cpp  701C.cpp  A  A 2.cpp  a.out  agc066A 2  agc066A 2.cpp  emil 2.py  input.txt  output.txt  test 2  test.cpp
CP/VIM/: a.out  test 2.cpp
CTF/: Reverse100  Reverse100.c  a.out  output.txt  test  test.cpp
Compp/: 11292 2  11292 2.cpp  1594A  1594A.cpp  1809A  1809A 2.cpp  1829A  1829A.cpp  1832A 2  1832A.cpp  1832B  1832B 2.cpp  1837A  1837A.cpp  1837B 2  1837B 2.cpp  1846A  1846A 2.cpp  1846B  1846B.cpp  1846C 2  1846C 2.cpp  1846D  1846D.cpp  1847A  1847A.cpp  1847B  1847B.cpp  1A  1A.cpp  2038A.py  231A 2  231A.cpp  983A  983A.cpp  983B  983B.cpp  Egentrening 3C.docx  NIO14R2Brodering 2  NIO14R2Brodering.cpp  (+14 more)
Compp/ATC313/: 1904A  1904A.cpp  A  A 2.cpp  ABC300A  ABC300A.cpp  B  B.cpp  D  D 2.cpp
Compp/Educative/: Combin.cpp  Primes 2.cpp  map 2  map 2.cpp  output.txt
Compp/NIOoppgaver/: blippcoin  blippcoin.cpp  glomma 2  glomma.cpp  input.txt  kuponger  kuponger.cpp  nio16-runde2-lavalek.cpp  nio16-runde2-tannhjul.cpp  test 2  test.cpp  testcoordtoadjl.cpp
LeetCodeØving/: 56MergeIntervall  56MergeIntervall.cpp  a.out  mergelinkedlist  mergelinkedlist.cpp  mergesorted  mergesorted 2.cpp  mergesorted 3  output 3.txt  par.cpp  tempCodeRunnerFile  test  test.cpp  test.py  tip  tip.cpp  twosum  twosum 2.cpp
LeetCodeØving/LeetCodeØving/: leap.cpp  main.cpp  marquee.html
LeetCodeØving/LeetCodeØving.xcodeproj/: project.pbxproj
LeetCodeØving/output/: a.out  mergesorted 2  output.txt  tip
LeetHub/0121-best-time-to-buy-and-sell-stock/: 0121-best-time-to-buy-and-sell-stock.cpp
LinkedList/28-find-the-index-of-the-first-occurrence-in-a-string/: find-the-index-of-the-first-occurrence-in-a-string.py
NCPC/2023/: A  A.cpp  input.txt  output.txt
NIO/: Header 2.h  Testing.hpp
NIO - Copy/: base 4.cpp  basebs 2.cpp  basehopp 2.cpp  bh 2.cpp  debtog 2.cpp  ikkjeendre 2.cpp  inputf 4.in  mino 4.cpp  minotaur 3.cpp  optimtog.cpp  outputf 2.out  r 4.cpp  rekt 4.cpp  rett 3.cpp  rettferdighet 2.cpp  spesielleTall.cpp  test 2.cpp  testerny.cpp  tog 4.cpp  tognett 2.cpp
NIO.cpp/NIO.cpp/: main 2.cpp
NIO.cpp/NIO.cpp.xcodeproj/: project.pbxproj
NIO/NIO/: BackUp.cpp  SickPeople2022-2.cpp  Tester2 2.cpp  Tester2.hpp  a 2.out  main  newtestlabyrinth 2.cpp  newting  newting.cpp  pythonPandemic.py  sick 2  sick.cpp  tester  tester.cpp
NIO/NIO.xcodeproj/: project.pbxproj
NIO/øving/: 2022-1 2.py
OL/OL.xcodeproj/: project.pbxproj
OppgaverNIO/: Bananbonanza.cpp  BananbonanzaT  BananbonanzaT 2.cpp  GK.cpp  Lynnedslag 2.cpp  Lynnedslag-test 2.cpp  NS 2.cpp  Personlighetstyper 2  Personlighetstyper.cpp  a 2.out  bananbonanza (1).cpp  nettverkssikkerhet.cpp  nettverkssikkerhetfil.cpp  t 2.py  test 2.py  tns 2.cpp
Tilfeldige oppgaver/: tip 2  tip 2.cpp
bashscripts/: run_file.sh
leetcodesolutions/1-two-sum/: two-sum.cpp
leetcodesolutions/100-same-tree/: same-tree.cpp
leetcodesolutions/11-container-with-most-water/: container-with-most-water.cpp
leetcodesolutions/111-minimum-depth-of-binary-tree/: minimum-depth-of-binary-tree.cpp
leetcodesolutions/121-best-time-to-buy-and-sell-stock/: best-time-to-buy-and-sell-stock.cpp
leetcodesolutions/125-valid-palindrome/: valid-palindrome.cpp
leetcodesolutions/1250-longest-common-subsequence/: longest-common-subsequence.cpp
leetcodesolutions/128-longest-consecutive-sequence/: longest-consecutive-sequence.cpp
leetcodesolutions/1310-watering-plants/: watering-plants.cpp
leetcodesolutions/134-gas-station/: gas-station.cpp
leetcodesolutions/136-single-number/: single-number.cpp
leetcodesolutions/14-longest-common-prefix/: longest-common-prefix.py
leetcodesolutions/141-linked-list-cycle/: linked-list-cycle.cpp
leetcodesolutions/15-3sum/: 3sum.cpp
leetcodesolutions/150-evaluate-reverse-polish-notation/: evaluate-reverse-polish-notation.cpp
leetcodesolutions/165-compare-version-numbers/: compare-version-numbers.py
leetcodesolutions/169-majority-element/: majority-element.cpp
leetcodesolutions/191-number-of-1-bits/: number-of-1-bits.cpp
leetcodesolutions/1972-rotating-the-box/: rotating-the-box.cpp
leetcodesolutions/2-add-two-numbers/: add-two-numbers.cpp
leetcodesolutions/206-reverse-linked-list/: reverse-linked-list.cpp
leetcodesolutions/2089-maximum-matrix-sum/: maximum-matrix-sum.cpp
leetcodesolutions/21-merge-two-sorted-lists/: merge-two-sorted-lists.cpp
leetcodesolutions/213-house-robber-ii/: house-robber-ii.cpp
leetcodesolutions/2248-minimum-cost-of-buying-candies-with-discount/: minimum-cost-of-buying-candies-with-discount.cpp
leetcodesolutions/226-invert-binary-tree/: invert-binary-tree.cpp
leetcodesolutions/69-sqrtx/: sqrtx.cpp
(+98 files in other folders)
